--- a/src/assets/components/Seccion04/Seccion04.css
+++ b/src/assets/components/Seccion04/Seccion04.css
@@ -32,6 +32,7 @@
 .s4contentSlider {
   display: grid;
   justify-items: center;
+  width: 100%;
   height: 400px;
   gap: 20px;
   background-color: #ffffff;
