--- a/src/assets/components/Seccion02/seccio02.css
+++ b/src/assets/components/Seccion02/seccio02.css
@@ -13,17 +13,19 @@
   background-position: center;
   background-size: cover;
   text-align: center;
-  animation: tilt-in-fwd-tr 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-  animation-timeline: scroll(root block); 
-  animation-range: 0 1050px;
+  animation: tilt-in-fwd-tr cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  view-timeline-name: --reveal;
+  animation-timeline: --reveal; 
+  animation-range: entry 25% cover 30%;
 }
 .s2Txt h2 {
   font-size: 55px;
   font-weight: 500;
   animation: typing 1.3s steps(40, end) forwards;
   clip-path: inset(0 100% 0 0);
-  animation-timeline: scroll(root block); 
-  animation-range: 0 1000px;
+  view-timeline-name: --reveal;
+  animation-timeline: --reveal; 
+  animation-range: entry 25% cover 30%;
 }
 
 /* Estilo para el contenedor de la imagen */
@@ -105,8 +107,9 @@
   width: 85%;
   margin: 32px 0;
   animation: text-focus-in cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-  animation-timeline: scroll(root block); 
-  animation-range: 0 980px;
+  view-timeline-name: --reveal;
+  animation-timeline: --reveal; 
+  animation-range: entry 25% cover 30%;
 }
 
 .s2DivLa {
@@ -123,9 +126,10 @@
 .s2DLbItem {
   border-radius: 23px;
   padding: 20px;
-  animation: tilt-in-fwd-tr 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-  animation-timeline: scroll(root block); 
-  animation-range: 0 1000px;
+  animation: tilt-in-fwd-tr cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  view-timeline-name: --reveal;
+  animation-timeline: --reveal; 
+  animation-range: entry 25% cover 30%;
 }
 .s2DLaItem:nth-child(1) {
   display: grid;
