--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,32 @@ img{
   width: 100%;
   height: 100%;
 }
+h3{
+  animation: typing 1.3s steps(40, end) forwards;
+  clip-path: inset(0 100% 0 0);
+  view-timeline-name: --reveal;
+  animation-timeline: --reveal; 
+  animation-range: entry 30% cover 30%;
+}
+p {
+  animation: tracking-in-expand cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+  view-timeline-name: --reveal;
+  animation-timeline: --reveal;
+  animation-range: entry 30% cover 35%;
+}
+
+@keyframes tracking-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 @media (width <= 650px){
   .container{
     margin: 0;
