--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+body {
+  overflow-x: hidden !important;
+  max-width: 100vw !important;
+}
+main{
+  max-width: 100%;
+  min-height: 100vh;
+}
 .container{
   margin: 0 30px;
   padding: 23px 50px;
@@ -5,6 +13,13 @@
 img{
   width: 100%;
   height: 100%;
+}
+h3 {
+  animation: typing 1.3s steps(40, end) forwards;
+  clip-path: inset(0 100% 0 0);
+  view-timeline-name: --reveal;
+  animation-timeline: --reveal; 
+  animation-range: entry 25% cover 30%;
 }
 p{
   animation: text-focus-in cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
