--- a/src/assets/styles/nav.css
+++ b/src/assets/styles/nav.css
@@ -22,7 +22,12 @@
     color: #000;
     text-decoration: none;
 }
-
+.nav ul li select{
+    background-color: transparent;
+    border: none;
+    color: #000;
+    font-size: 14.5px;
+}
 .nav .Options ul{
     display: flex;
     align-items: center;
