--- a/src/assets/styles/nav.css
+++ b/src/assets/styles/nav.css
@@ -56,6 +56,8 @@
     }
     .nav{
         padding: 1.5rem 3rem;
+        animation: none;
+        clip-path: none;
     }
 }
 @media (width <= 650px){
