--- a/src/assets/components/Seccion03/seccion03.css
+++ b/src/assets/components/Seccion03/seccion03.css
@@ -21,9 +21,9 @@
   background-color: #f5f5f5;
   border-radius: 20px;
   border-bottom-left-radius: 0;
-  animation: roll-in-blurred-left cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
+  animation: roll-in-blurred-left cubic-bezier(0.23, 1, 0.32, 1) both;
   view-timeline-name: --reveal;
-  animation-timeline: --reveal; 
+  animation-timeline: --reveal;
   animation-range: entry 25% cover 30%;
 }
 
@@ -47,7 +47,7 @@
   animation: typing 1.3s steps(40, end) forwards;
   view-timeline-name: --reveal;
   clip-path: inset(0 100% 0 0);
-  animation-timeline: --reveal; 
+  animation-timeline: --reveal;
   animation-range: entry 25% cover 50%;
 }
 
@@ -65,49 +65,57 @@
   display: grid;
   gap: 10px;
   padding: 23px;
-  animation: slide-in-blurred-top cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
+  animation: slide-in-blurred-top cubic-bezier(0.23, 1, 0.32, 1) both;
   view-timeline-name: --reveal;
-  animation-timeline: --reveal; 
+  animation-timeline: --reveal;
   animation-range: entry 25% cover 30%;
 }
-.s3DItem:nth-child(1) .s3DTxt h3{
+.s3DItem:nth-child(1) .s3DTxt h3 {
   font-size: 20px;
 }
 .s3DItem:nth-child(1) .s3DTxt:nth-child(1) {
   border-radius: 32px;
   background-color: #f5f5f5;
 }
-.s3DItem:nth-child(2) img{
+.s3DItem:nth-child(2) img {
   border-radius: 32px;
   animation: slit-in-vertical 0.45s ease-out both;
   view-timeline-name: --reveal;
-  animation-timeline: --reveal; 
+  animation-timeline: --reveal;
   animation-range: entry 25% cover 30%;
 }
-@media(width <= 1110px){
-    .s3Divs{
-        grid-template-columns: 1fr;
-        margin: 32px;
-    }
-    .s3Divs .s3DItem .s3DTxt{
-        text-align: center;
-    }
+@media (width <= 1110px) {
+  .S3Contanier header .s3Txt,
+  .S3Contanier header .tituloS3 h2,
+  .s3DItem:nth-child(1) .s3DTxt,
+  .s3DItem:nth-child(1) .s3DTxt h3,
+  .s3DItem:nth-child(2) img {
+    animation: none;
+    clip-path: none;
+  }
+  .s3Divs {
+    grid-template-columns: 1fr;
+    margin: 32px;
+  }
+  .s3Divs .s3DItem .s3DTxt {
+    text-align: center;
+  }
 }
-@media(width <= 900px){
-    .S3Contanier header .s3Txt{
-        position: static;
-        border-bottom-left-radius: 20px;
-    }
-    .S3Contanier header{
-        gap: 32px;
-        grid-template-columns: 1fr;
-    }
+@media (width <= 900px) {
+  .S3Contanier header .s3Txt {
+    position: static;
+    border-bottom-left-radius: 20px;
+  }
+  .S3Contanier header {
+    gap: 32px;
+    grid-template-columns: 1fr;
+  }
 }
-@media(width <= 450px){
-    .S3Contanier header .tituloS3 h2{
-        font-size: 38px;
-    }
-    .s3Divs{
-        margin: 32px 0;
-    }
+@media (width <= 450px) {
+  .S3Contanier header .tituloS3 h2 {
+    font-size: 38px;
+  }
+  .s3Divs {
+    margin: 32px 0;
+  }
 }
