--- a/src/assets/components/Seccion05/Seccion05.css
+++ b/src/assets/components/Seccion05/Seccion05.css
@@ -20,7 +20,7 @@
   animation: typing steps(40, end) forwards;
   clip-path: inset(0 100% 0 0);
   view-timeline-name: --reveal;
-  animation-timeline: --reveal; 
+  animation-timeline: --reveal;
   animation-range: entry 25% cover 50%;
 }
 .s5TituloTxt {
@@ -32,9 +32,9 @@
   border-radius: 23px;
   background-color: #f5f5f5;
   padding: 23px 32px;
-  animation: tilt-in-fwd-tr cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: tilt-in-fwd-tr cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   view-timeline-name: --reveal;
-  animation-timeline: --reveal; 
+  animation-timeline: --reveal;
   animation-range: entry 25% cover 50%;
 }
 
@@ -71,9 +71,10 @@
     0 100%,
     0% 85%
   );
-  animation: slide-in-elliptic-left-fwd cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: slide-in-elliptic-left-fwd cubic-bezier(0.25, 0.46, 0.45, 0.94)
+    both;
   view-timeline-name: --reveal;
-  animation-timeline: --reveal; 
+  animation-timeline: --reveal;
   animation-range: entry 25% cover 32%;
 }
 .s5TxtImg {
@@ -91,9 +92,9 @@
   position: relative;
   padding: 13px 23px;
   right: 25px;
-  animation: slide-in-blurred-br cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
+  animation: slide-in-blurred-br cubic-bezier(0.23, 1, 0.32, 1) both;
   view-timeline-name: --reveal;
-  animation-timeline: --reveal; 
+  animation-timeline: --reveal;
   animation-range: entry 25% cover 40%;
 }
 .s5TxtContent {
@@ -162,9 +163,9 @@
   border-radius: 23px;
   border: none;
   background-color: #101010;
-  animation: shake-horizontal cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
-  view-timeline-name: --reveal; 
-  animation-timeline: --reveal; 
+  animation: shake-horizontal cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
+  view-timeline-name: --reveal;
+  animation-timeline: --reveal;
   animation-range: entry 25% cover 50%;
 }
 .s5ContentBtn button svg {
@@ -177,6 +178,14 @@
   }
 }
 @media (width <=1100px) {
+  .s5Titulo h2,
+  .s5TituloTxt,
+  .S5ContentImg img,
+  .s5ContentTxt,
+  .s5ContentBtn button {
+    animation: none;
+    clip-path: none;
+  }
   .s5HeaderContainer {
     grid-template-columns: 1fr;
   }
@@ -215,7 +224,7 @@
   .s5TxtContent p {
     font-size: 20px;
   }
-  .s5TxtImg{
+  .s5TxtImg {
     width: 80%;
   }
 }
