--- a/src/assets/components/Footer/Footer.css
+++ b/src/assets/components/Footer/Footer.css
@@ -182,8 +182,9 @@
   }
 }
 @media (width <= 400px) {
-  .footer {
+  html .footer {
     padding-top: 80px !important;
     padding-bottom: 50px !important;
+    margin-bottom: 0 !important; 
   }
 }
