Nav y seccion01 Ajustes

--- a/src/assets/components/Seccion01/seccion01.css
+++ b/src/assets/components/Seccion01/seccion01.css
@@ -208,6 +208,9 @@
   }
 }
 @media (width <= 450px){
+  html .seccion01{
+    margin-top: 0px !important;
+  }
   .imgPrincipalS1 img{
     height: 250px;
   }
